# intersection-detection-2d-lidar

./: CMakeLists.txt  README.md  package.xml
bagfiles/: scan_tf.bag  scn_filtered.bag
config/: rosconsole.conf
filters/: shadow_filter_example.yaml
include/corner_detect/: laserScanListener.hh  topoFeatures.hh
launch/: topo_detect.launch  topo_detect_gdb.launch  topo_detect_sim.launch  topo_detect_valgrind.launch
msg/: MidPoint.msg
src/: laserScanListener.cpp  laserScanListener_orig.cpp  laserScanListener_tomerge.cpp  topoFeatures.cpp
world/: se1.world  test.world
worlds/: four_way_intersection.world  multi_test.world  right_turn.world  se1f1_16.world  t_intersection.world  test.world  test_2.world  test_3.world
